# zo-discord

./: .gitignore  README.md  bot.py  commands.py  db.py  pyproject.toml  requirements.txt  start.sh  zo_client.py
agents/: research-agent-example.md
config/: config.example.json
skill/: SKILL.md  scheduled-agent-example.md
skill/scripts/: discord-cli.sh
tests/: conftest.py  test_bot.py  test_commands.py  test_db.py  test_formatting.py  test_overrides.py  test_utils.py  test_zo_client.py
zo_discord/: bot.py  commands.py  db.py  hermes.py  utils.py  zo_client.py
