[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zo-discord"
version = "1.0.0"
description = "A Discord bot for Zo Computer that turns your Discord server into a conversational interface with Zo."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "JackALaing" },
]
dependencies = [
    "py-cord>=2.6.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/JackALaing/zo-discord"

[tool.setuptools.packages.find]
include = ["zo_discord*"]
